<resources>
    <string name="app_name">NDK EX</string>
    <string name="title_name">NDK EXAMPLES</string>

    <string-array name="uri_spinner_array">
        <item>http://upload.wikimedia.org/wikipedia/commons/6/6d/Banana.ogg</item>
        <item>http://www.freesound.org/data/previews/18/18765_18799-lq.mp3</item>
    </string-array>

    <string name="android">Android</string>
    <string name="sawtooth">Sawtooth</string>
    <string name="embedded_soundtrack">Embedded\nsoundtrack</string>
    <string name="reverb">Reverb</string>
    <string name="mute_uri">Mute</string>
    <string name="enable_stereo_position_uri">Enable SP</string>
    <string name="uri_spinner">URI spinner</string>
    <string name="uri_soundtrack">URI\nsoundtrack</string>
    <string name="pause_uri">Pause\nURI</string>
    <string name="play_uri">Play\nURI</string>
    <string name="loop_uri">Loop\nURI</string>
    <string name="mute_left_uri">mute left</string>
    <string name="mute_right_uri">mute right</string>
    <string name="solo_left_uri">solo left</string>
    <string name="solo_right_uri">solo right</string>
    <string name="channels_uri">Get channels</string>
    <string name="volume_uri">Volume</string>
    <string name="pan_uri">Pan</string>
    <string name="record">Record</string>
    <string name="playback">Playback</string>
    <string name="NeedRecordAudioPermission">"This sample needs RECORD_AUDIO permission"</string>
    <string name="hello">Hello, Android using native audio!</string>
    <string name="hello_short">Hello</string>

    <string name="start_java">Start/Pause\nJava MediaPlayer</string>
    <string name="start_native">Start/Pause\nnative MediaPlayer</string>
    <string name="finish">Finish</string>

    <string name="rewind_java">Rewind\nJava MediaPlayer</string>
    <string name="rewind_native">Rewind\nnative MediaPlayer</string>

    <string name="source_select">Please select the media source</string>
    <string name="source_prompt">Media source</string>
    <string-array name="source_array">
        <item>clips/NativeMedia.ts</item>
    </string-array>

    <string name="sink_select">Please select the video sink</string>
    <string name="sink_prompt">Video sink</string>
    <string-array name="sink_array">
        <item>Surface 1</item>
        <item>Surface 2</item>
        <item>SurfaceTexture 1</item>
        <item>SurfaceTexture 2</item>
    </string-array>
    <string name="error_creation">Error creating player:
        check media file is copied to android device</string>


    <string name="application_info">Application Info</string>
    <string name="developer_info">Developer Info</string>
    <string name="application_info_text">
        <![CDATA[
            <p>Version: %1$s</p>
            <p>This application is open source at <a href="https://github.com/duongnx10m/ndk-examples">github.com/duongnx10m/ndk-examples</a></p>
        ]]>
    </string>

    <string name="developer_info_text" translatable="false">
        <![CDATA[
            <p>Duong Nguyen Xuan(DuongNX)</p>
            <p><a href="https://github.com/duongnx10m">Github</a></p>
            <p><a href="https://www.linkedin.com/in/duong-nx-5b2131131">LinkIn</a></p>
        ]]>
    </string>
    <string name="feedback">Feed back</string>
</resources>
