<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            style="@style/tv_about_header"
            android:text="@string/application_info" />

        <TextView
            android:id="@+id/tvContent"
            style="@style/tv_about_content" />

        <TextView
            style="@style/tv_about_header"
            android:text="@string/developer_info" />

        <TextView
            android:id="@+id/tvDev"
            style="@style/tv_about_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btFeedback"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_play"
                android:text="@string/feedback"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
